testdata/baselines/reference/submodule/compiler/declarationEmitMonorepoBaseUrl.errors.txt
/packages/compiler-sfc/src/index.ts(2,17): error TS2742: The inferred type of 'resolveParserPlugins' cannot be named without a reference to '.pnpm/@babel+parser@7.23.6/node_modules/@babel/parser'. This is likely not portable. A type annotation is necessary.


==== /tsconfig.json (0 errors) ====
    {
      "compilerOptions": {
        "module": "nodenext",
        "declaration": true,
        "outDir": "temp",
        "baseUrl": "."
      }
    }
    
==== /packages/compiler-core/src/index.ts (0 errors) ====
    import { PluginConfig } from "@babel/parser";
    
==== /packages/compiler-sfc/src/index.ts (1 errors) ====
    import { createPlugin } from "@babel/parser";
    export function resolveParserPlugins() {
                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2742: The inferred type of 'resolveParserPlugins' cannot be named without a reference to '.pnpm/@babel+parser@7.23.6/node_modules/@babel/parser'. This is likely not portable. A type annotation is necessary.
      return [createPlugin()];
    }
    
==== /node_modules/.pnpm/@babel+parser@7.23.6/node_modules/@babel/parser/package.json (0 errors) ====
    {
      "name": "@babel/parser",
      "version": "7.23.6",
      "main": "./lib/index.js",
      "types": "./typings/babel-parser.d.ts"
    }
    
==== /node_modules/.pnpm/@babel+parser@7.23.6/node_modules/@babel/parser/typings/babel-parser.d.ts (0 errors) ====
    export declare function createPlugin(): PluginConfig;
    export declare class PluginConfig {}
    
==== /packages/compiler-core/package.json (0 errors) ====
    {
      "name": "@vue/compiler-core",
      "version": "3.0.0",
      "main": "./src/index.ts",
      "dependencies": {
        "@babel/parser": "^7.0.0"
      }
    }
    
==== /packages/compiler-sfc/package.json (0 errors) ====
    {
      "name": "@vue/compiler-sfc",
      "version": "3.0.0",
      "main": "./src/index.ts",
      "dependencies": {
        "@babel/parser": "^7.0.0",
        "@vue/compiler-core": "^3.0.0"
      }
    }
    